# cpp_asset_inventory_agent

./: CMakeLists.txt  README.md
assets/: dashboard_preview.txt  preview_sent.json
src/: agent_main.cpp  file_store.cpp  file_store.hpp  http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp  inventory.cpp  inventory.hpp  logger.cpp  logger.hpp  mini_json.cpp  mini_json.hpp  platform.cpp  platform.hpp  server_main.cpp
